[tool.poetry]
name = "py2zenodo"
version = "0.1.0-alpha2"
authors = ["RemyLau <remylau961@gmail.com>"]
license = "MIT"

readme = "README.md"
description = "A Python wrapper for Zenodo REST API."
repository = "https://github.com/RemyLau/py2zenodo"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
tqdm = "^4.64.0"
click = "^8.1.3"

[tool.poetry.scripts]
py2zenodo = "py2zenodo.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pre-commit = ">=2.20,<4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
